[metadata]
name = Seg2linkUnet2d
version = 0.1.0
author = Chentao Wen
author_email = chintou.on@gmail.com
description = A compact tool for training 2D U-Net and making predictions
url = https://github.com/WenChentao/Seg2Link-UNet2d
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = Seg2linkUnet2d
python_requires = >=3.9
include_package_data = True
