[metadata]
name = seg2link_unet2d
version = 0.1.1
author = Chentao Wen
author_email = chintou.on@gmail.com
description = A compact tool for training 2D U-Net and making predictions
url = https://github.com/WenChentao/seg2link_unet2d
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = seg2link_unet2d
python_requires = >=3.9
include_package_data = True
install_requires =
        tqdm==4.63.0
        matplotlib==3.5.1
        notebook==6.4.12
