[metadata]
name = seg2link_unet2d
version = 0.2.2
author = Chentao Wen
author_email = chintou.on@gmail.com
description = A compact tool for training 2D U-Net and making predictions
url = https://github.com/WenChentao/seg2link_unet2d
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = seg2link_unet2d
python_requires = >=3.7
include_package_data = True

[options.extras_require]
local =
        matplotlib==3.5.1
        tqdm==4.63.0
        notebook==6.4.12
